--- a/App_Banco_Digital/App_Banco_Digital/App.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/App.xaml
@@ -14,6 +14,15 @@
 
         </Style>
 
+        <Style x:Key="label_cadastro" TargetType="Label">
+
+            <Setter Property="TextColor" Value="#000000"/>
+            <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="FontAttributes" Value="Bold"/>
+            <Setter Property="FontSize" Value="17"/>
+
+        </Style>
+
     </Application.Resources>
     
 </Application>
