Desenvolvendo o menu lateral da página inicial da aplicação.

--- a/App_Banco_Digital/App_Banco_Digital/App.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/App.xaml
@@ -5,6 +5,8 @@
     
     <Application.Resources>
 
+        <!--<Color x:Key="cor_sistema">#00AFFF</Color>-->
+
         <Style x:Key="entry_cadastro" TargetType="Entry">
 
             <Setter Property="TextColor" Value="#000000"/>
