--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Inicio/Inicio.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Inicio/Inicio.xaml
@@ -1,30 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App_Banco_Digital.View.Modules.Inicio.Inicio">
-
-    <MasterDetailPage.Master>
-
-        <ContentPage Title="Menu">
-
-            <ContentPage.Content>
-
-                <StackLayout>
-
-                    
-
-                </StackLayout>
-
-            </ContentPage.Content>
-
-        </ContentPage>
-
-    </MasterDetailPage.Master>
-
-    <MasterDetailPage.Detail>
-        
-        
-        
-    </MasterDetailPage.Detail>
     
-</MasterDetailPage>
+    <ContentPage.Content>
+        
+        <StackLayout>
+            
+            
+            
+        </StackLayout>
+        
+    </ContentPage.Content>
+    
+</ContentPage>
