--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Login/Login.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Login/Login.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App_Banco_Digital.View.Modules.Login.Login"
-             BackgroundColor="#FFFFFF">
+             BackgroundColor="#FFFFFF" Title="Login">
 
     <ContentPage.Content>
 
