--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Abertura/Abertura.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Abertura/Abertura.xaml
@@ -1,18 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App_Banco_Digital.View.Modules.Abertura.Abertura">
+             x:Class="App_Banco_Digital.View.Modules.Abertura.Abertura"
+             Style="{ StaticResource fundo_paginas }">
     
     <ContentPage.Content>
 
         <ScrollView>
 
-            <Grid RowDefinitions="200, Auto" VerticalOptions="Center"
-                  Padding="40" RowSpacing="15">
+            <Grid RowDefinitions="150, Auto" VerticalOptions="Center"
+                  Padding="40">
 
-                <Image x:Name="img_logo_abertura" Aspect="AspectFit" Grid.Row="0"/>
+                <Image x:Name="img_logo_abertura" Aspect="AspectFit"
+                       Grid.Row="0"/>
 
-                <StackLayout VerticalOptions="Center" Grid.Row="1" Spacing="15">
+                <StackLayout VerticalOptions="Center" Grid.Row="1"
+                             Spacing="15" Margin="0,30,0,0">
 
                     <Label x:Name="lbl_saudacao" Text="Bem-vindo(a) ao Banco Pan."
                            TextColor="#000000" FontSize="30"/>
