--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Correntista/Cadastro_Correntista.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Correntista/Cadastro_Correntista.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App_Banco_Digital.View.Modules.Correntista.Cadastro_Correntista"
-             Title="Cadastro de Correstista">
+             Title="Cadastro de Correstista"
+             Style="{ StaticResource fundo_paginas }">
 
     <ContentPage.Resources>
 
