--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Menu/Menu.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Menu/Menu.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                  x:Class="App_Banco_Digital.View.Modules.Menu.Menu">
+                  x:Class="App_Banco_Digital.View.Modules.Menu.Menu"
+                  Style="{ StaticResource fundo_paginas }">
 
     <MasterDetailPage.Master>
 
