--- a/App_Banco_Digital/App_Banco_Digital/App.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/App.xaml
@@ -9,14 +9,21 @@
 
         <Style x:Key="fundo_paginas" TargetType="Page">
 
-            <Setter Property="BackgroundColor" Value="#FFFFFF"/>
+            <Setter Property="BackgroundColor" Value="#2F2F36"/>
+
+        </Style>
+
+        <Style x:Key="botao_principal" TargetType="Button">
+
+            <Setter Property="TextColor" Value="#FFFFFF"/>
+            <Setter Property="CornerRadius" Value="10"/>
+            <Setter Property="BackgroundColor" Value="#00AFFF"/>
 
         </Style>
 
         <Style x:Key="entry_cadastro" TargetType="Entry">
 
             <Setter Property="TextColor" Value="#000000"/>
-            <Setter Property="PlaceholderColor" Value="#808080"/>
             <Setter Property="HorizontalTextAlignment" Value="Center"/>
 
         </Style>
