--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Conta/Cadastro_Conta.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Conta/Cadastro_Conta.xaml
@@ -2,55 +2,65 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App_Banco_Digital.View.Modules.Conta.Cadastro_Conta"
+             Title="Criar Conta Bancária"
              Style="{ StaticResource fundo_paginas }">
     
     <ContentPage.Content>
 
-        <StackLayout Padding="10" Spacing="10">
+        <Grid RowDefinitions="250,*" Padding="10" RowSpacing="10">
 
-            <Image x:Name="img_banner_cadastro_conta" Aspect="Fill"/>
+            <Frame CornerRadius="0" Padding="5" Grid.Row="0"
+                   BorderColor="#FFFFFF" BackgroundColor="Transparent">
 
-            <Label Text="Criar Conta:" FontAttributes="Bold"
-                   FontSize="25" TextColor="#000000"/>
+                <Image x:Name="img_banner_cadastro_conta"
+                       Margin="0" Aspect="AspectFill"/>
 
-            <ScrollView>
+            </Frame>
 
-                <StackLayout Spacing="10" VerticalOptions="Center">
+            <Frame CornerRadius="10" Margin="0,15,0,0" Grid.Row="1">
 
-                    <!--<Label Text="Número" Style="{ StaticResource label_cadastro }"/>
-                    <Entry x:Name="txt_numero_conta" Keyboard="Numeric"
-                           Style="{ StaticResource entry_cadastro }"/>-->
+                <ScrollView>
 
-                    <Label Text="Nome de Usuário:" Style="{ StaticResource label_cadastro }"/>
-                    <Entry x:Name="txt_nome_usuario_conta" Keyboard="Text"
-                           Placeholder="Um apelido, por exemplo"
-                           Style="{ StaticResource entry_cadastro }"/>
+                    <StackLayout VerticalOptions="Center" Spacing="10">
 
-                    <Label Text="Tipo:" Style="{ StaticResource label_cadastro }"/>
-                    <Picker x:Name="pck_tipo_conta" TextColor="#808080"
-                            HorizontalTextAlignment="Center"/>
+                        <!--<Label Text="Número" Style="{ StaticResource label_cadastro }"/>
+                        <Entry x:Name="txt_numero_conta" Keyboard="Numeric"
+                               Style="{ StaticResource entry_cadastro }"/>-->
 
-                    <Label Text="Senha:" Style="{ StaticResource label_cadastro }"/>
-                    <Entry x:Name="txt_senha_conta" Keyboard="Text"
-                           Placeholder="Crie uma senha para a sua conta"
-                           Style="{ StaticResource entry_cadastro }"/>
+                        <Label Text="Nome de Usuário:" Style="{ StaticResource label_cadastro }"/>
+                        <Entry x:Name="txt_nome_usuario_conta" Keyboard="Text"
+                               Style="{ StaticResource entry_cadastro }"/>
 
-                    <!--<Label Text="Ativo:" Style="{ StaticResource label_cadastro }"/>
-                    <Grid RadioButtonGroup.GroupName="opcoes" ColumnDefinitions="*,*">
+                        <Label Text="Tipo:" Style="{ StaticResource label_cadastro }"/>
+                        <Picker x:Name="pck_tipo_conta" TextColor="#000000"
+                                HorizontalTextAlignment="Center"/>
 
-                        <RadioButton Content="Ativo" GroupName="opcoes"
-                                     Grid.Column="0" HorizontalOptions="Center"/>
+                        <Label Text="Senha:" Style="{ StaticResource label_cadastro }"/>
+                        <Entry x:Name="txt_senha_conta" Keyboard="Text"
+                               Style="{ StaticResource entry_cadastro }"/>
 
-                        <RadioButton Content="Inativo" GroupName="opcoes"
-                                     Grid.Column="1" HorizontalOptions="Center"/>
+                        <!--<Label Text="Ativo:" Style="{ StaticResource label_cadastro }"/>
+                        <Grid RadioButtonGroup.GroupName="opcoes" ColumnDefinitions="*,*">
 
-                    </Grid>-->
+                            <RadioButton Content="Ativo" GroupName="opcoes"
+                                         Grid.Column="0" HorizontalOptions="Center"/>
 
-                </StackLayout>
+                            <RadioButton Content="Inativo" GroupName="opcoes"
+                                         Grid.Column="1" HorizontalOptions="Center"/>
 
-            </ScrollView>
+                        </Grid>-->
 
-        </StackLayout>
+                        <Button x:Name="btn_cadastrar_conta" Text="Cadastrar"
+                                Margin="0,20,0,0" Style="{ StaticResource botao_principal }"
+                                Clicked="btn_cadastrar_conta_Clicked"/>
+
+                    </StackLayout>
+
+                </ScrollView>
+
+            </Frame>
+
+        </Grid>
 
     </ContentPage.Content>
     
