Corrigindo erros estéticos.

--- a/App_Banco_Digital/App_Banco_Digital/App.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/App.xaml
@@ -25,6 +25,7 @@
 
             <Setter Property="TextColor" Value="#000000"/>
             <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="PlaceholderColor" Value="#808080"/>
 
         </Style>
 
