Desenvolvendo a tela de cadastro de correntistas.

--- a/App_Banco_Digital/App_Banco_Digital/App.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/App.xaml
@@ -9,7 +9,7 @@
 
         <Style x:Key="fundo_paginas" TargetType="Page">
 
-            <Setter Property="BackgroundColor" Value="#2F2F36"/>
+            <Setter Property="BackgroundColor" Value="#FFFFFF"/>
 
         </Style>
 
