--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Login/Login.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Login/Login.xaml
@@ -22,7 +22,8 @@
 
                     <Entry x:Name="txt_usuario" Placeholder="Insira seu usuário aqui"
                            Keyboard="Text" ClearButtonVisibility="WhileEditing"
-                           TextColor="#FFFFFF"/>
+                           Style="{ StaticResource entry_cadastro }"
+                           TextColor="#000000"/>
 
                     <StackLayout Spacing="0" Margin="0">
 
@@ -30,10 +31,10 @@
                                Keyboard="Text" IsPassword="True"
                                ClearButtonVisibility="WhileEditing"
                                Style="{ StaticResource entry_cadastro }"
-                               TextColor="#FFFFFF"/>
+                               TextColor="#000000"/>
 
                         <Button x:Name="btn_mostrar_ocultar_senha" Text="Exibir senha"
-                                BackgroundColor="Transparent" TextColor="#FFFFFF"
+                                BackgroundColor="Transparent" TextColor="#000000"
                                 HorizontalOptions="End" FontSize="12" FontAttributes="Bold"
                                 Clicked="btn_mostrar_ocultar_senha_Clicked"/>
 
@@ -47,7 +48,7 @@
                             BackgroundColor="#00AFFF" Clicked="btn_entrar_Clicked"
                             CornerRadius="10" TextColor="#FFFFFF" FontAttributes="Bold"/>
 
-                    <Button x:Name="btn_redirecionar_cadastro_conta" TextColor="#FFFFFF"
+                    <Button x:Name="btn_redirecionar_cadastro_conta" TextColor="#000000"
                             Text="Clique aqui, caso ainda não possua um cadastro."
                             BackgroundColor="Transparent" FontSize="10"
                             FontAttributes="Italic"
