Desenvolvendo a tela de login dos usuários do aplicativo.

--- a/App_Banco_Digital/App_Banco_Digital/App.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/App.xaml
@@ -5,7 +5,11 @@
     
     <Application.Resources>
 
-        
+        <Style x:Key="Estilo_Digio" TargetType="Page">
+
+            <Setter Property="BackgroundColor" Value="#00285F"/>
+
+        </Style>
 
     </Application.Resources>
     
