--- a/App_Banco_Digital/App_Banco_Digital/App.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/App.xaml
@@ -11,6 +11,40 @@
 
         </Style>
 
+        <Style x:Key="Estilo_Cadastros" TargetType="Page">
+
+            <Setter Property="BackgroundColor" Value="#FFFFFF"/>
+
+        </Style>
+
+        <Style x:Key="Titulos_Cadastros" TargetType="Label">
+
+            <Setter Property="TextColor" Value="#000000"/>
+            <Setter Property="HorizontalTextAlignment" Value="Start"/>
+            <Setter Property="FontAttributes" Value="Bold"/>
+            <Setter Property="FontSize" Value="Large"/>
+
+        </Style>
+
+        <Style x:Key="Campos_Cadastros" TargetType="Entry">
+
+            <Setter Property="TextColor" Value="#000000"/>
+            <Setter Property="ClearButtonVisibility" Value="WhileEditing"/>
+            <Setter Property="Keyboard" Value="Text"/>
+            <Setter Property="HorizontalTextAlignment" Value="Start"/>
+            <Setter Property="PlaceholderColor" Value="#808080"/>
+
+        </Style>
+
+        <Style x:Key="Botoes_Cadastros" TargetType="Button">
+
+            <Setter Property="BackgroundColor" Value="#00285F"/>
+            <Setter Property="TextColor" Value="#FFFFFF"/>
+            <Setter Property="CornerRadius" Value="10"/>
+            <Setter Property="Margin" Value="0,20,0,0"/>
+
+        </Style>
+
     </Application.Resources>
     
 </Application>
