--- a/App_Banco_Digital/App_Banco_Digital/LoginCorrentista.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/LoginCorrentista.xaml
@@ -10,7 +10,7 @@
 
             <Style x:Key="Titulos_Login_Correntista" TargetType="Label">
 
-                <Setter Property="TextColor" Value="#FFFF00"/>
+                <Setter Property="TextColor" Value="#000000"/>
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="FontSize" Value="Large"/>
@@ -19,7 +19,7 @@
 
             <Style x:Key="Campos_Login_Correntista" TargetType="Entry">
 
-                <Setter Property="TextColor" Value="#FFFFFF"/>
+                <Setter Property="TextColor" Value="#000000"/>
                 <Setter Property="ClearButtonVisibility" Value="WhileEditing"/>
                 <Setter Property="Keyboard" Value="Text"/>
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
@@ -27,17 +27,22 @@
 
             </Style>
 
-            <Style x:Key="Botoes_Login_Correntista" TargetType="Button">
+            <Style x:Key="Botao_Cadastro_Correntista" TargetType="Button">
 
                 <Setter Property="BackgroundColor" Value="Transparent"/>
-                <Setter Property="TextColor" Value="#FFFFFF"/>
+                <Setter Property="TextColor" Value="#000000"/>
                 <Setter Property="CornerRadius" Value="10"/>
-                <Setter Property="BorderWidth" Value="3"/>
-                <Setter Property="BorderColor" Value="#FFFFFF"/>
                 <Setter Property="Margin" Value="0,20,0,0"/>
 
             </Style>
-            
+
+            <Style x:Key="Botao_Login" TargetType="Button" BaseResourceKey="Botao_Cadastro_Correntista">
+
+                <Setter Property="BackgroundColor" Value="#00285F"/>
+                <Setter Property="TextColor" Value="#FFFFFF"/>
+
+            </Style>
+
         </ResourceDictionary>
         
     </ContentPage.Resources>
@@ -49,7 +54,7 @@
             <Grid ColumnDefinitions="*,200,*" RowDefinitions="200,400" VerticalOptions="Center">
 
                 <Frame Grid.Column="1" Grid.Row="0" BackgroundColor="#FFFFFF"
-                       CornerRadius="100" BorderColor="#03E2E5">
+                       CornerRadius="100" BorderColor="#00285F">
 
                     <Image x:Name="img_logo" Aspect="Fill"/>
 
@@ -65,13 +70,14 @@
                     <Entry x:Name="txt_senha" Placeholder="Insira sua senha aqui"
                            Style="{ StaticResource Campos_Login_Correntista }"/>
 
-                    <Button x:Name="btn_login" Text="Entrar" BorderColor="#03E2E5"
+                    <Button x:Name="btn_login" Text="Entrar"
                             Clicked="btn_login_Clicked" Margin="0,35,0,0"
-                            Style="{ StaticResource Botoes_Login_Correntista }"/>
+                            Style="{ StaticResource Botao_Login }"/>
 
                     <Button x:Name="btn_cadastrar_correntista" Text="Criar Conta"
+                            BorderColor="#000000" BorderWidth="3"
                             Clicked="btn_cadastrar_correntista_Clicked"
-                            Style="{ StaticResource Botoes_Login_Correntista }"/>
+                            Style="{ StaticResource Botao_Cadastro_Correntista }"/>
 
                 </StackLayout>
 
