--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Outros/Menu.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Outros/Menu.xaml
@@ -10,17 +10,18 @@
 
             <ContentPage.Content>
 
-                <Grid RowDefinitions="200,*">
+                <Grid RowDefinitions="200,*" Padding="10,15,10,15">
 
-                    <Frame Grid.Row="0">
+                    <Frame Grid.Row="0" CornerRadius="15"
+                           BorderColor="#00285F" BackgroundColor="#FFFFFF">
 
-                        
+                        <Image x:Name="img_logo" Aspect="AspectFit"/>
 
                     </Frame>
 
-                    <ScrollView Grid.Row="1">
+                    <ScrollView Grid.Row="1" BackgroundColor="Transparent">
 
-                        <Button/>
+                        <Button Text="Teste"/>
 
                     </ScrollView>
 
