--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Outros/Home.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Outros/Home.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App_Banco_Digital.View.Modules.Outros.Home"
-             Style="{ StaticResource Estilo_Digio }">
+             BackgroundColor="#00285F">
 
     <!--<ContentPage.ToolbarItems>
 
@@ -11,13 +11,62 @@
     </ContentPage.ToolbarItems>-->
 
     <ContentPage.Content>
-        
-        <StackLayout>
 
-            <Label Text="Teste"/>
+        <ScrollView>
 
-        </StackLayout>
-        
+            <Grid RowDefinitions="400,*">
+
+                <Grid Grid.Row="0" ColumnDefinitions="*,*" RowDefinitions="*,*,*,*,*, 50" Padding="10">
+
+                    <StackLayout Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center">
+
+                        <Frame CornerRadius="100">
+                            
+                            
+                            
+                        </Frame>
+
+                        <Label Text="Nome do usuário."/>
+
+                    </StackLayout>
+
+                    <Label Text="Minha conta" HorizontalTextAlignment="Start" FontAttributes="Bold"
+                           Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"/>
+
+                    <Label Text="Saldo disponível" HorizontalTextAlignment="Start"
+                           Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2"/>
+
+                    <Label Text="$$$$$$$$$$$$$" HorizontalTextAlignment="Start"
+                           Grid.Column="0" Grid.Row="3"/>
+
+                    <Label Text="Ocultar saldo" HorizontalTextAlignment="End"
+                           Grid.Column="1" Grid.Row="3"/>
+
+                    <Label Text="Gerar extrato" HorizontalTextAlignment="Center"
+                           Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2"/>
+
+                    <StackLayout Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2">
+
+                        <Label Text="Opções"/>
+
+                    </StackLayout>
+
+                </Grid>
+
+                <Frame Grid.Row="1" BackgroundColor="#FFFFFF" CornerRadius="0">
+
+                    <StackLayout>
+
+
+
+                    </StackLayout>
+
+                </Frame>
+
+            </Grid>
+
+        </ScrollView>
+
     </ContentPage.Content>
     
 </ContentPage>
